增加quartz框架，编写toast提醒服务

--- a/INotificationServer/appsettings.Development.json
+++ b/INotificationServer/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "QuartzDB": "Data Source=my.server.com;Initial Catalog=QuartzDB;User ID=sa;Password=Pass@word1;TrustServerCertificate=true"
   }
 }
