--- a/INotificationServer/INotificationServer.csproj
+++ b/INotificationServer/INotificationServer.csproj
@@ -7,6 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="logs\**" />
+    <Content Remove="logs\**" />
+    <EmbeddedResource Remove="logs\**" />
+    <None Remove="logs\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AppAny.Quartz.EntityFrameworkCore.Migrations.SqlServer" Version="0.5.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.7">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Quartz.AspNetCore" Version="3.11.0" />
+    <PackageReference Include="Quartz.Serialization.Json" Version="3.11.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
     <PackageReference Include="Serilog.Sinks.Async" Version="2.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
@@ -15,6 +29,8 @@
     <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="8.2.0" />
     <PackageReference Include="Volo.Abp.AspNetCore.SignalR" Version="8.2.0" />
     <PackageReference Include="Volo.Abp.Autofac" Version="8.2.0" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="8.2.0" />
+    <PackageReference Include="Volo.Abp.FluentValidation" Version="8.2.0" />
     <PackageReference Include="Volo.Abp.Swashbuckle" Version="8.2.0" />
   </ItemGroup>
 
