--- a/INotificationServer/appsettings.json
+++ b/INotificationServer/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "QuartzDB": "Data Source=my.server.com;Initial Catalog=QuartzDB;User ID=sa;Password=Pass@word1;TrustServerCertificate=true"
+  }
 }
